# X-Server

./: .gitignore  CMakelists.txt  README.md  X-Server.sln
X-Server/: CMakeLists.txt  X-Server.vcxproj
X-Server.DevOperations/: CMakeLists.txt  X-Server.DevOperations.vcxproj  X-Server.DevOperations.vcxproj.filters
X-Server.DevOperations/src/: FlightLoopManager.cpp  FlightLoopManager.h  FlightLoopParameters.h  Operations.cpp  Operations.h
X-Server.Logging/: CMakeLists.txt  Makefile  X-Server.Logging.vcxproj  X-Server.Logging.vcxproj.filters
X-Server.Logging/include/: Logger.h
X-Server.Logging/src/: Logger.cpp
X-Server.Manager/: CmakeLists.txt  Makefile  X-Server.Manager.vcxproj  X-Server.Manager.vcxproj.filters
X-Server.Manager/include/: FlightLoopParameters.h  Manager.h  MasterCallback.h  OperationParameters.h
X-Server.Manager/include/Datarefs/: AbstractDataref.h  Dataref.h  FFA320Dataref.h
X-Server.Manager/include/Managers/: DatarefManager.h  FlightLoopManager.h  OperationManager.h
X-Server.Manager/src/: Manager.cpp  MasterCallback.cpp
X-Server.Manager/src/Datarefs/: Dataref.cpp  FFA320Dataref.cpp
X-Server.Manager/src/Managers/: DatarefManager.cpp  FlightLoopManager.cpp  OperationManager.cpp
X-Server.Manager/src/Tools/: Utils.cpp
X-Server.Networking/: CMakeLists.txt  Makefile  X-Server.Networking.vcxproj  X-Server.Networking.vcxproj.filters
X-Server.Networking/include/: IServer.h  Message.h  UDPBeacon.h  UDPServer.h
X-Server.Networking/src/: NetworkUtils.cpp  UDPBeacon.cpp  UDPServer.cpp
X-Server.Operations/: X-Server.Operations.vcxproj  X-Server.Operations.vcxproj.filters  cpp.hint
X-Server.Operations.Beta/: CMakeLists.txt  X-Server.Operations.Beta.vcxproj  X-Server.Operations.Beta.vcxproj.filters
X-Server.Operations.Beta/src/: Operation.cpp  Operation.h
X-Server.Operations/src/: AircraftManager.cpp  AircraftManager.h  DatarefManager.cpp  DatarefManager.h  FlightLoopManager.h  FlightLoopParameters.h  Operations.cpp  Operations.h
X-Server.Tester/: beacon_service.py  client_function.py  main.py  requirements.txt  scenario_1.txt  udp_client_service.py  udp_receiver_service.py
X-Server.XPlane/: X-Server.XPlane.vcxproj  X-Server.XPlane.vcxproj.filters
X-Server.XPlane/Sources/: MasterCallback.cpp  MasterCallback.h  main.cpp
X-Server.XPlane/Sources/Datarefs/: Dataref.cpp  DatarefManager.cpp  DatarefManager.h  FFA320Dataref.cpp
X-Server.XPlane/Sources/Network/: UDPBeacon.cpp  UDPBeacon.h  UDPServer.cpp  UDPServer.h
X-Server.XPlane/Sources/Tools/: Logger.cpp
X-Server.XPlane/Sources/XPlaneManagers/: DatarefManager.h  FlightLoopManager.cpp  FlightLoopManager.h
X-Server/Sources/: main.cpp
XServer.Operations/: CMakeLists.txt  XServer.Operations.vcxproj  XServer.Operations.vcxproj.filters
XServer.Operations/src/: DatarefManager.cpp  Operations.cpp  Operations.h
